--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="viewport" content="width=800px, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥDollsꕥ</title>
+	<title>ꕥDesignꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
@@ -47,8 +47,8 @@
 <div class="sidebyside">
 	
 <section id="dig" class="full">
-
-  
+<details>
+  <summary>Digital Publication Desgin</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
 	
@@ -70,6 +70,7 @@
  </div>
 </div>
 </section>
+	</details>
 	<p></p>
 	
 <div class="container">
@@ -79,7 +80,14 @@
 <section id="posters" class="full">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
   
 
 	 <h2>Honey</h2>
@@ -98,7 +106,14 @@
 	
 <section id="mag" class="full">
   
-  <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
   
  
 	 <h2>null</h2>
@@ -114,16 +129,19 @@
 	
 <section class="full">
   
-  <img src="https://files.catbox.moe/o5vy3q.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	
-  <img src="https://files.catbox.moe/uc7fyo.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/7z3g80.jpeg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/a6vyah.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  
-  <img src="https://files.catbox.moe/zsvaet.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
 	 <h2>null</h2>
 	 <p>coming soon!</p>
 	 <p></p>
