--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -48,7 +48,7 @@
 	
 <section id="dig" class="full">
 <details>
-  <summary>Digital Publication Desgin</summary>
+  <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
 	
@@ -67,10 +67,61 @@
 	 <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>coming soon!</p>
 	 <p></p>
- </div>
-</div>
+
+</details>
+</section><div class="sidebyside">
+	
+<section id="dig" class="full">
+<details>
+  <summary>Publication Design</summary>
+  
+  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+
+	
+	
+	 <h2>Vanya - 16" Bisque Doll</h2>
+	 <p>coming soon!</p>
+	 <p></p>
+
+</details>
+</section><div class="sidebyside">
+	
+<section id="dig" class="full">
+<details>
+  <summary>Publication Design</summary>
+  
+  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
+  
+  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+
+	
+	
+	 <h2>Vanya - 16" Bisque Doll</h2>
+	 <p>coming soon!</p>
+	 <p></p>
+
+</details>
 </section>
-	</details>
+</div>
+</div>
 	<p></p>
 	
 <div class="container">
