--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -45,9 +45,9 @@
 <div class="container">
 	
 <div class="sidebyside">
-	
+	<details>
 <section id="dig" class="full">
-<details>
+
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
@@ -69,10 +69,12 @@
 	 <p></p>
 
 </details>
-</section><div class="sidebyside">
+</section>
 	
+	<div class="sidebyside">
+	<details>
 <section id="dig" class="full">
-<details>
+
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
@@ -94,10 +96,12 @@
 	 <p></p>
 
 </details>
-</section><div class="sidebyside">
+</section>
 	
+		<div class="sidebyside">
+<details>	
 <section id="dig" class="full">
-<details>
+
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
@@ -125,6 +129,7 @@
 	<p></p>
 </div>
 </div>
+	
 	
 <div class="container">
 
