--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -41,7 +41,7 @@
 
 	
 <section id="dig" class="full">
-<details>
+<details style="justify:left;">
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
@@ -68,7 +68,7 @@
 	
 	
 <section id="dig" class="full">
-<details>
+<details style="justify:left;">
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
@@ -95,7 +95,7 @@
 		
 
 <section id="dig" class="full">
-<details>	
+<details style="justify:left;">	
   <summary>Publication Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
