--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -69,7 +69,7 @@
 	
 <section id="dig" class="full">
 <details style="justify:left;">
-  <summary>Publication Design</summary>
+  <summary>Poster Design</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
 	
@@ -96,7 +96,7 @@
 
 <section id="dig" class="full">
 <details style="justify:left;">	
-  <summary>Publication Design</summary>
+  <summary>Branding</summary>
   
   <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
 	
