--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -98,11 +98,11 @@
 <details style="justify:left;">	
   <summary>Branding</summary>
   
-  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/6wpk7d.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/40fx9w.pdf" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/io9v9y.jpg" width="33.33%" style="object-fit:cover; float:left;">
 	
   <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
   
