--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -100,15 +100,19 @@
   
   <img src="https://files.catbox.moe/6wpk7d.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/40fx9w.pdf" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/chovay.png" width="33.33%" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/io9v9y.jpg" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+  <img src="https://files.catbox.moe/tynxvh.png" width="33.33%" style="object-fit:cover;  float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+  
+  <img src="" width="33.33%" style="object-fit:cover;  float:left;">
+	
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
 
 	
 	
