--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -71,17 +71,17 @@
 <details style="justify:left;">
   <summary>Poster Design</summary>
   
-  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/x3rq3n.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/j1pnr6.png" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/912qk1.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+  <img src="" width="33.33%" style="object-fit:cover;  float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
 
 	
 	
@@ -107,12 +107,6 @@
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/tynxvh.png" width="33.33%" style="object-fit:cover;  float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
-  
-  <img src="" width="33.33%" style="object-fit:cover;  float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
 
 	
 	
