--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -55,6 +55,31 @@
   <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
 	
   <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/yi84jg.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/0hmi63.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/zq2z7v.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/gthw1k.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/8lf5s6.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/nmfx6p.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/n6nygx.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="https://files.catbox.moe/7ff9uw.png" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+	
+  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+	
 
 	
 	
@@ -75,7 +100,7 @@
 	
   <img src="https://files.catbox.moe/j1pnr6.png" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/912qk1.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/vcreqd.png" width="33.33%" style="object-fit:cover; float:left;">
 	
   <img src="" width="33.33%" style="object-fit:cover; float:left;">
   
