--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -55,37 +55,14 @@
   <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
 	
   <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/yi84jg.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/0hmi63.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/zq2z7v.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/gthw1k.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/8lf5s6.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/nmfx6p.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/n6nygx.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="https://files.catbox.moe/7ff9uw.png" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
-	
-
-	
-	
-	 <h2>Vanya - 16" Bisque Doll</h2>
-	 <p>coming soon!</p>
-	 <p></p>
+	<p></p>
+		 <h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
 
 </details>
 </section>
