--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -109,7 +109,8 @@
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/tynxvh.png" width="33.33%" style="object-fit:cover;  float:left;">
-
+<p></p>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="80%" height="auto" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
