--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   title="Graphic Design" href="/GraphicDesign">
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
-  title="Turner & Cosmo" href="/WebDesign">
+  title="UI/UX design" href="/WebDesign">
   <img src="https://files.catbox.moe/gvcsfc.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Traditional Art" href="/Traditional">
