--- a/WebDesign.html
+++ b/WebDesign.html
@@ -32,14 +32,14 @@
 	
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
-	
-<div class=subnavcontainer>
+	<!---<div class=subnavcontainer>
   <ul style="float:none;">
   <li><a href="#custom-AG">-</a></li>
   <li><a href="#Custom-12">-</a></li>
   <li><a href="#Vanya">-</a></li>
 </ul>
-</div>
+</div> 
+-->
 
 	  
 <div class="container" style="background:transparent; outline:0px; border:0px; width:450px; height:800px; float:left;">
