--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -7,6 +7,7 @@
 	<title>ꕥDesignꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="imghover.css" rel="stylesheet" type="text/css" media="all">
       <meta property="og:image" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png" />
   <meta property="twitter:card" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png">
 
