--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -44,7 +44,7 @@
 <details style="justify:left;">
   <summary>Publication Design</summary>
   
-  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px" style="object-fit:cover; float:left;">
 	
   <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
   
