--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -166,7 +166,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 </div>
                 <div class="row" style="position: relative; left: 30px;">
                     <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/CCI2ICONE.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px">
+                        <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px">
                     </div>
                     <div class="column">
                         <img src="./Galleria/ICONES/ICONE2025/CCIINCONE.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" width="150px">
@@ -289,7 +289,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="./Galleria/ARTE/Artgallery2025/CalicoCatInves2.jpg" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/6wpk7d.png" style="width: 330px; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;">[02/06/2025] Other sketches for the character mentioned before. I dropped the "grow ass man" and decided to make him look smaller, but still with the suit. I decided to have his eyes larger than the first sketches. It makes him cuter? Of course, but I think the eyes with that build is better, not only that but it sorta makes him seem like he is starring off into space. Because of that he sorta reminds me of Nekojiru's cats (of course) and Mae from Night in the Woods. My idea is that he is, like, a force of good that helps people in need. Kinda of cheesy idea, but it was what I had. If I use him somewhere, it would probably be in a train or something similar. Seems like the perfect place to a weird cat help people's lives.</p>
                         </div>
                     </div>
