--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -166,7 +166,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 </div>
                 <div class="row" style="position: relative; left: 30px;">
                     <div class="column">
-                        <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px">
+                        <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px">
                     </div>
                     <div class="column">
                         <img src="./Galleria/ICONES/ICONE2025/CCIINCONE.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" width="150px">
