--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -289,7 +289,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 330px; margin-left:auto; margin-right:auto; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;">[02/06/2025]</p>
                         </div>
                     </div>
