--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -81,17 +81,17 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <details style="justify:left;">
   <summary>Publication Design</summary>
   
-  <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/oyolz0.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/yocv3v.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+  <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	<p></p>
 		 <h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
